--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -9,7 +9,7 @@ jobs:
   NextGen-Static-Analysis:
     runs-on: ubuntu-latest
     container:
-      image: shiftleft/core:latest
+      image: enjoyelan/core:latest
     steps:
     - uses: actions/checkout@v3
     - name: Download ShiftLeft CLI
