--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Download ShiftLeft CLI
       run: |
         php -v
+        uname -a
         curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
 
     - name: NextGen Static Analysis
